toolchain/internal/core/analysis/testdata/valid/enum_spreads_valid.vdl
enum BaseRole {
  User
  Editor
}

enum AllRole {
  ...BaseRole
  Admin
}
