toolchain/internal/core/analysis/testdata/errors/enums/spread_missing_enum.vdl
// @expect: E202

enum Role {
  ...BaseRole
  Admin
}
